     Workarounds : use SFTP  OR  use a command such as "cat /proc/cpuinfo". 
     (The last one is the "best workaround", will work in all cases)
     
  => Be aware of the fact that SFTP SSH Channel may be not available, 
     so prefer SCP to maximize scripts / code portability from one system to an other.
     Looks like linux SSHD comes with SFTP by default, but not AIX.
     --> SOLVED IN 0.9.5-b3 WITH an automatic fallback mechanism

  => TAKE CARE OF HOW MANY SESSIONS CAN BE MANAGED SIMULTANEOUSLY. Check sshd configuration
     MaxStartups = 10 (default) the maximum number of concurrent unauthenticated connections to the SSH daemon
     MaxSessions = 10 (default) the maximum number of open sessions permitted per network connection

  => AIX sshd & SSHExecChannel (no persistence) doesn't work well when virtual tty is used
     (execWithPty must be keep to false, this is the default value)
     strange behavior : when SFtp subchannel is enabled, the maximum number of ExecChannel in // decrease...
  
  => Take care of system limits for sshd (nofile & nproc)
     Check /etc/security/limits.conf for linux systems

  => Password expiration may ask you for a new password, so you can be blocked waiting for a result that never comes.

  => Remember that some operations may require a TTY (or let's rather say a virtual TTY) or behave 
     differently with or without a TTY/VTTY (sudo, mysql, ...)

------------------------------------------------------------------
0.9.10 (2013-xx-yy) WORK IN PROGRESS

 - TODO : Add tests with a remote host, in addition to localhost
 - TODO : "ls --format=single-column" may to be replaced by "ls | cat"
 - TODO : Check if "date -u '+%Y-%m-%d %H:%M:%S %Z'" is supported on all *nix  (Checked OK for : AIX, Linux, SunOS)
 - TODO : BSD, Cygwin support
 - TODO : trying to find a solution with SCP and some special linux file (with unknown file size)
 - TODO : manage when sftp submodule is not available => throw the right exception